collector import removed